# react-native-btsig-telink

./: .gitignore  CompositionData.js  MeshSigModel.js  NodeInfo.js  Opcode.js  PrivateDevice.js  README.md  RNBtSigTelink.podspec  index.native.js  index.web.js  package.json
android/: CMakeLists.txt  DevelopmentGuide.md  DevelopmentGuide_cn.md  assist.txt  build.gradle  proguard-rules.pro  readme.txt
android/src/androidTest/java/com/telink/sig/mesh/: ExampleInstrumentedTest.java
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: mesh_lib.c  mesh_lib.h
android/src/main/cpp/header/ble_lt_mesh/: .cproject
android/src/main/cpp/header/ble_lt_mesh/proj/: tl_common.h
android/src/main/cpp/header/ble_lt_mesh/proj/common/: compatibility.h  tutility.h  types.h
android/src/main/cpp/header/ble_lt_mesh/proj/drivers/: adc.h.ldenc  flash.h  keyboard.h  spi.h  spi_i.h  uart.h
android/src/main/cpp/header/ble_lt_mesh/proj/mcu/: clock.h  clock_i.h  compiler.h  config.h  config_chip_type.h  gpio.h  irq_i.h  pwm.h  register.h  watchdog_i.h
android/src/main/cpp/header/ble_lt_mesh/proj/mcu_spec/: gpio_8267.h  register_8267.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/: pm.h  pm_8267.h  rf_drv.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/ble/: att.h  ble_common.h  ble_smp.h  blt_config.h  gap.h  l2cap.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/ble/hci/: hci_const.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/ble/ll/: ll.h  ll_adv.h  ll_pm.h  ll_scan.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/ble/service/: ble_ll_ota.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/mesh_crypto/: mesh_crypto.h  sha256_telink.h
android/src/main/cpp/header/ble_lt_mesh/proj_lib/sig_mesh/: app_beacon.h  app_health.h  app_mesh.h  app_provison.h  app_proxy.h  interface.h
android/src/main/cpp/header/reference/tl_bulk/lib_file/: gatt_provision.h  host_fifo.c.ldenc  host_fifo.h  hw_fun.h
android/src/main/java/com/telink/ble/mesh/: DeviceInfo.java  NodeInfo.java  PrivateDevice.java  TelinkBtSigNativeModule.java  TelinkBtSigPackage.java  UnitConvert.java
android/src/main/java/com/telink/ble/mesh/core/: Encipher.java  MeshUtils.java
android/src/main/java/com/telink/sig/mesh/: PrivateDevice.java  TelinkApplication.java  TelinkBtSigNativeModule.java
android/src/main/res/values/: strings.xml
android/src/test/java/com/telink/ble/mesh/: ExampleUnitTest.java  MeshTest.java
android/src/test/java/com/telink/sig/mesh/: ExampleUnitTest.java
(+483 files in other folders)
